--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "test-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://katemorton.github.io/restaurant_review_app/",
   "dependencies": {
+    "gh-pages": "^1.2.0",
     "google-maps-react": "^2.0.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
@@ -14,6 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   }
 }
